--- a/templates/partials/_return_nav.html.twig
+++ b/templates/partials/_return_nav.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-return">
+<nav class="navbar-return">
 
         <div class="navbar-container-left">
             <div class="navbar-item">
