--- a/templates/security_registration.html.twig
+++ b/templates/security_registration.html.twig
@@ -13,6 +13,7 @@
         {% endblock %}
     </head>
     <body>
+        <div class="navbar-empty-container"></div>
         <nav class="navbar">
 
                 <div class="navbar-container-left">
